fix metadata admission across reloads